--- a/DemoDotnetCore3/appsettings.json
+++ b/DemoDotnetCore3/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "DbConfig": {
+        "ConnectionString": "mongodb+srv://admin:admin1234@tomorrow.0cukz.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority",
+        "DbName": "DemoDotnetCore3",
+        "Command": "Command"
     }
-  },
-  "AllowedHosts": "*"
 }
